funcionamiento de la vista del catalogo

--- a/index.html
+++ b/index.html
@@ -46,7 +46,7 @@
     <input type="checkbox" id="ckbox">
     <label for="ckbox" class="selector"><i class="fa fa-bars" aria-hidden="true"></i></label>
     <ul class="menu-box">
-      <li><a href="#catalog">Catálogo</a></li>
+      <li><a href="src/html/catalog.html">Catálogo</a></li>
       <li><a href="src/html/infoPay.html">Delivery y Pago</a></li>
       <li><a href="src/html/tips.html">Consejos</a></li>
       <li><a href="src/html/contact.html">Contacto</a></li>
@@ -120,16 +120,16 @@
           </div>
         </div>
       </div>
-      <div class="new-products">
-        <h1 class="title">Nuevos Productos</h1>
-        <div class="products">
-          <div class="products-row">
-            <div class="product">
-              <div class="img-product">
-                <img src="src/img/new1.webp" alt="new-products">
+      <div class="new-novelties">
+        <h1 class="title">Novedades!</h1>
+        <div class="novelties">
+          <div class="novelties-row">
+            <div class="novelty">
+              <div class="img-novelty">
+                <img src="src/img/new1.webp" alt="new-novelties">
               </div>
-              <div class="info-product">
-                <h2 class="title-product">Mochila de Paseo</h2>
+              <div class="info-novelty">
+                <h2 class="title-novelty">Mochila de Paseo</h2>
                 <p title="62.371.633,49 Bs">14.99$</p>
               </div>
               <div class="rating">
@@ -148,16 +148,16 @@
               </div>
               <div class="button">
                 <a href="#">
-                  <button class="btn-grad">Ver Producto</button>
+                  <button class="btn-grad">Ver Detalles...</button>
                 </a>
               </div>
             </div>
-            <div class="product">
-              <div class="img-product">
-                <img src="src/img/new2.png" alt="new-products">
+            <div class="novelty">
+              <div class="img-novelty">
+                <img src="src/img/new2.png" alt="new-novelties">
               </div>
-              <div class="info-product">
-                <h2 class="title-product">Árbol Rascador</h2>
+              <div class="info-novelty">
+                <h2 class="title-novelty">Árbol Rascador</h2>
                 <p>30.99$</p>
               </div>
               <div class="rating">
@@ -176,18 +176,18 @@
               </div>
               <div class="button">
                 <a href="#">
-                  <button class="btn-grad">Ver Producto</button>
+                  <button class="btn-grad">Ver Detalles...</button>
                 </a>
               </div>
             </div>
           </div>
-          <div class="products-row">
-            <div class="product">
-              <div class="img-product">
-                <img src="src/img/new3.png" alt="new-products">
+          <div class="novelties-row">
+            <div class="novelty">
+              <div class="img-novelty">
+                <img src="src/img/new3.png" alt="new-novelties">
               </div>
-              <div class="info-product">
-                <h2 class="title-product">Dispensador Inteligente</h2>
+              <div class="info-novelty">
+                <h2 class="title-novelty">Dispensador Inteligente</h2>
                 <p>85.00$</p>
               </div>
               <div class="rating">
@@ -206,16 +206,16 @@
               </div>
               <div class="button">
                 <a href="#">
-                  <button class="btn-grad">Ver Producto</button>
+                  <button class="btn-grad">Ver Detalles...</button>
                 </a>
               </div>
             </div>
-            <div class="product">
-              <div class="img-product">
-                <img src="src/img/new4.png" alt="new-products">
+            <div class="novelty">
+              <div class="img-novelty">
+                <img src="src/img/new4.png" alt="new-novelties">
               </div>
-              <div class="info-product">
-                <h2 class="title-product">Trasportin</h2>
+              <div class="info-novelty">
+                <h2 class="title-novelty">Trasportin</h2>
                 <p>60.50$</p>
               </div>
               <div class="rating">
@@ -234,7 +234,7 @@
               </div>
               <div class="button">
                 <a href="#">
-                  <button class="btn-grad">Ver Producto</button>
+                  <button class="btn-grad">Ver Detalles...</button>
                 </a>
               </div>
             </div>
