--- a/src/html/contact.html
+++ b/src/html/contact.html
@@ -65,7 +65,7 @@
           </ul>
         </div>
         <div class='contact'>
-          <h3 class="subtitle_products">Enviar Correo</h3>
+          <h3 class="subtitle_novelties">Enviar Correo</h3>
           <form>
             <p>
               <label>Nombre</label>
