--- a/src/html/catalog.html
+++ b/src/html/catalog.html
@@ -53,7 +53,65 @@
     </ul> 
   </nav>
   <div class="cont">
-  
+    <div class="catalogue">
+      <div class="catalog-row">
+        <div class="catalog-category">
+          <h1 class="title">Perros</h1>
+        </div>
+        <div class="catalog-cont">
+          <div class="catalog-card product">
+            <div class="card-img">
+              <img src="../img/dog1.png" alt="dog1" class="image">
+            </div>
+            <div class="card-info">
+              <h2 class="subtitle product-name">Inter Nutri 4kg</h2>
+              <p class="price">15$</p>
+            </div>
+            <div class="show">
+              <button class="btn-grad" onclick="loadProduct(this)">Ver Detalles...</button> 
+            </div>
+          </div>
+          <div class="catalog-card product">
+            <div class="card-img">
+              <img src="../img/dog2.png" alt="dog2" class="image">
+            </div>
+            <div class="card-info">
+              <h2 class="subtitle product-name">ExtruDog 4kg</h2>
+              <p class="price">15$</p>
+            </div>
+            <div class="show">
+              <button class="btn-grad" onclick="loadProduct(this)">Ver Detalles...</button>
+            </div>
+          </div>
+        </div>
+        <div class="catalog-cont">
+          <div class="catalog-card product">
+            <div class="card-img">
+              <img src="../img/dog3.png" alt="dog3" class="image">
+            </div>
+            <div class="card-info">
+              <h2 class="subtitle product-name">Ringo 4kg</h2>
+              <p class="price">15$</p>
+            </div>
+            <div class="show">
+              <button class="btn-grad" onclick="loadProduct(this)">Ver Detalles...</button>
+            </div>
+          </div>
+          <div class="catalog-card product">
+            <div class="card-img">
+              <img src="../img/dog4.png" alt="dog4" class="image">
+            </div>
+            <div class="card-info">
+              <h2 class="subtitle product-name">Nutra Nugguets 4kg</h2>
+              <p class="price">15$</p>
+            </div>
+            <div class="show">
+              <button class="btn-grad" onclick="loadProduct(this)">Ver Detalles...</button>
+            </div>
+          </div>
+        </div>
+      </div>
+    </div>
   </div>
   <footer>
     <nav class="social-bar">
@@ -68,5 +126,6 @@
       <img src="../img/logo_small.png" alt="logo">
     </div>
   </footer>
+  <script src="../js/main.js"></script>
 </body>
 </html>
