--- a/src/html/catalog.html
+++ b/src/html/catalog.html
@@ -56,28 +56,85 @@
     <div class="catalogue">
       <div class="catalog-row">
         <div class="catalog-category">
-          <h1 class="title">Perros</h1>
+          <h1 class="title title-dog">Perros</h1>
         </div>
         <div class="catalog-cont">
-          <div class="catalog-card product">
+          <div class="catalog-card product dog">
             <div class="card-img">
               <img src="../img/dog1.png" alt="dog1" class="image">
             </div>
             <div class="card-info">
               <h2 class="subtitle product-name">Inter Nutri 4kg</h2>
+              <p class="price">10$</p>
+            </div>
+            <div class="show">
+              <button class="btn-grad" onclick="loadProduct(this)">Ver Detalles...</button> 
+            </div>
+          </div>
+          <div class="catalog-card product dog">
+            <div class="card-img">
+              <img src="../img/dog2.png" alt="dog2" class="image">
+            </div>
+            <div class="card-info">
+              <h2 class="subtitle product-name">ExtruDog 17kg</h2>
+              <p class="price">30$</p>
+            </div>
+            <div class="show">
+              <button class="btn-grad" onclick="loadProduct(this)">Ver Detalles...</button>
+            </div>
+          </div>
+        </div>
+        <div class="catalog-cont">
+          <div class="catalog-card product dog">
+            <div class="card-img">
+              <img src="../img/dog3.png" alt="dog3" class="image">
+            </div>
+            <div class="card-info">
+              <h2 class="subtitle product-name">Ringo 1kg</h2>
+              <p class="price">3$</p>
+            </div>
+            <div class="show">
+              <button class="btn-grad" onclick="loadProduct(this)">Ver Detalles...</button>
+            </div>
+          </div>
+          <div class="catalog-card product dog">
+            <div class="card-img">
+              <img src="../img/dog4.png" alt="dog4" class="image">
+            </div>
+            <div class="card-info">
+              <h2 class="subtitle product-name">Nutra Nugguets 4kg</h2>
+              <p class="price">15$</p>
+            </div>
+            <div class="show">
+              <button class="btn-grad" onclick="loadProduct(this)">Ver Detalles...</button>
+            </div>
+          </div>
+        </div>
+      </div>
+      <div class="catalog-row">
+        <div class="catalog-category">
+          <h1 class="title title-cat">Gatos</h1>
+        </div>
+        <div class="catalog-cont">
+          <div class="catalog-card product cat">
+            <div class="card-img">
+              <img src="../img/cat1.png" alt="cat1" class="image">
+            </div>
+            <div class="card-info">
+              <h2 class="subtitle product-name info-cat">Arena Super Mix 7kg</h2>
               <p class="price">15$</p>
             </div>
             <div class="show">
               <button class="btn-grad" onclick="loadProduct(this)">Ver Detalles...</button> 
             </div>
           </div>
-          <div class="catalog-card product">
+          <div class="catalog-card product cat">
             <div class="card-img">
-              <img src="../img/dog2.png" alt="dog2" class="image">
+              <img src="../img/cat2.png" alt="cat2" class="image">
             </div>
             <div class="card-info">
-              <h2 class="subtitle product-name">ExtruDog 4kg</h2>
-              <p class="price">15$</p>
+              <h2 class="subtitle product-name info-cat">Xtreme Catnip 0.5oz</h2>
+              <p class="price">5$</p>
             </div>
             <div class="show">
               <button class="btn-grad" onclick="loadProduct(this)">Ver Detalles...</button>
@@ -85,24 +142,199 @@
           </div>
         </div>
         <div class="catalog-cont">
-          <div class="catalog-card product">
+          <div class="catalog-card product cat">
             <div class="card-img">
-              <img src="../img/dog3.png" alt="dog3" class="image">
+              <img src="../img/cat3.png" alt="cat3" class="image">
             </div>
             <div class="card-info">
-              <h2 class="subtitle product-name">Ringo 4kg</h2>
-              <p class="price">15$</p>
+              <h2 class="subtitle product-name info-cat">Sobres Whiskas 85g</h2>
+              <p class="price">1 x 2$  /  3 x 5$</p>
             </div>
             <div class="show">
               <button class="btn-grad" onclick="loadProduct(this)">Ver Detalles...</button>
             </div>
           </div>
-          <div class="catalog-card product">
+          <div class="catalog-card product cat">
             <div class="card-img">
-              <img src="../img/dog4.png" alt="dog4" class="image">
+              <img src="../img/cat4.png" alt="cat4" class="image">
             </div>
             <div class="card-info">
-              <h2 class="subtitle product-name">Nutra Nugguets 4kg</h2>
+              <h2 class="subtitle product-name info-cat">Flamenco con Catnip</h2>
+              <p class="price">4$</p>
+            </div>
+            <div class="show">
+              <button class="btn-grad" onclick="loadProduct(this)">Ver Detalles...</button>
+            </div>
+          </div>
+        </div>
+      </div>
+      <div class="catalog-row">
+        <div class="catalog-category">
+          <h1 class="title title-accessories">Accesorios</h1>
+        </div>
+        <div class="catalog-cont">
+          <div class="catalog-card product accessories">
+            <div class="card-img">
+              <img src="../img/accessories1.png" alt="accessories1" class="image">
+            </div>
+            <div class="card-info">
+              <h2 class="subtitle product-name info-cat">Bandana Estampada</h2>
+              <p>Varias Tallas</p>
+              <p class="price">Desde 8$</p>
+            </div>
+            <div class="show">
+              <button class="btn-grad" onclick="loadProduct(this)">Ver Detalles...</button> 
+            </div>
+          </div>
+          <div class="catalog-card product accessories">
+            <div class="card-img">
+              <img src="../img/accessories2.png" alt="accessories2" class="image">
+            </div>
+            <div class="card-info">
+              <h2 class="subtitle product-name info-cat">Cepillo para Mascotas</h2>
+              <p class="price">10$</p>
+            </div>
+            <div class="show">
+              <button class="btn-grad" onclick="loadProduct(this)">Ver Detalles...</button>
+            </div>
+          </div>
+        </div>
+        <div class="catalog-cont">
+          <div class="catalog-card product accessories">
+            <div class="card-img">
+              <img src="../img/accessories3.png" alt="accessories3" class="image">
+            </div>
+            <div class="card-info">
+              <h2 class="subtitle product-name info-cat">Collar con Paseador</h2>
+              <p>Varias Tallas</p>
+              <p class="price">Desde 25$</p>
+            </div>
+            <div class="show">
+              <button class="btn-grad" onclick="loadProduct(this)">Ver Detalles...</button>
+            </div>
+          </div>
+          <div class="catalog-card product accessories">
+            <div class="card-img">
+              <img src="../img/accessories4.png" alt="accessories4" class="image">
+            </div>
+            <div class="card-info">
+              <h2 class="subtitle product-name info-cat">Arnés tipo chaleco</h2>
+              <p>Varias Tallas</p>
+              <p class="price">Desde 15$</p>
+            </div>
+            <div class="show">
+              <button class="btn-grad" onclick="loadProduct(this)">Ver Detalles...</button>
+            </div>
+          </div>
+        </div>
+      </div>
+      <div class="catalog-row">
+        <div class="catalog-category">
+          <h1 class="title title-shower">Higiene</h1>
+        </div>
+        <div class="catalog-cont">
+          <div class="catalog-card product shower">
+            <div class="card-img">
+              <img src="../img/shower1.png" alt="shower1" class="image">
+            </div>
+            <div class="card-info">
+              <h2 class="subtitle product-name">Cortauñas Yommy</h2>
+              <p class="price">5$</p>
+            </div>
+            <div class="show">
+              <button class="btn-grad" onclick="loadProduct(this)">Ver Detalles...</button> 
+            </div>
+          </div>
+          <div class="catalog-card product shower">
+            <div class="card-img">
+              <img src="../img/shower2.png" alt="shower2" class="image">
+            </div>
+            <div class="card-info">
+              <h2 class="subtitle product-name">Champú Cosmético</h2>
+              <p class="price">3$</p>
+            </div>
+            <div class="show">
+              <button class="btn-grad" onclick="loadProduct(this)">Ver Detalles...</button>
+            </div>
+          </div>
+        </div>
+        <div class="catalog-cont">
+          <div class="catalog-card product shower">
+            <div class="card-img">
+              <img src="../img/shower3.png" alt="shower3" class="image">
+            </div>
+            <div class="card-info">
+              <h2 class="subtitle product-name">Quita Pelusa</h2>
+              <p>Incluye recambio</p>
+              <p class="price">4$</p>
+            </div>
+            <div class="show">
+              <button class="btn-grad" onclick="loadProduct(this)">Ver Detalles...</button>
+            </div>
+          </div>
+          <div class="catalog-card product shower">
+            <div class="card-img">
+              <img src="../img/shower4.png" alt="shower4" class="image">
+            </div>
+            <div class="card-info">
+              <h2 class="subtitle product-name">Champú Pelo Largo</h2>
+              <p class="price">6$</p>
+            </div>
+            <div class="show">
+              <button class="btn-grad" onclick="loadProduct(this)">Ver Detalles...</button>
+            </div>
+          </div>
+        </div>
+      </div>
+      <div class="catalog-row">
+        <div class="catalog-category">
+          <h1 class="title title-health">Salud</h1>
+        </div>
+        <div class="catalog-cont">
+          <div class="catalog-card product health">
+            <div class="card-img">
+              <img src="../img/health1.png" alt="health1" class="image">
+            </div>
+            <div class="card-info">
+              <h2 class="subtitle product-name info-cat">NexGrad Tableta Masticable</h2>
+              <p class="price">Desde 10$</p>
+            </div>
+            <div class="show">
+              <button class="btn-grad" onclick="loadProduct(this)">Ver Detalles...</button> 
+            </div>
+          </div>
+          <div class="catalog-card product health">
+            <div class="card-img">
+              <img src="../img/health2.png" alt="health2" class="image">
+            </div>
+            <div class="card-info">
+              <h2 class="subtitle product-name info-cat">Frontline Gato</h2>
+              <p class="price">10$</p>
+            </div>
+            <div class="show">
+              <button class="btn-grad" onclick="loadProduct(this)">Ver Detalles...</button>
+            </div>
+          </div>
+        </div>
+        <div class="catalog-cont">
+          <div class="catalog-card product health">
+            <div class="card-img">
+              <img src="../img/health3.png" alt="health3" class="image">
+            </div>
+            <div class="card-info">
+              <h2 class="subtitle product-name info-cat">Dominal Max Gato Pequeño</h2>
+              <p class="price">12$</p>
+            </div>
+            <div class="show">
+              <button class="btn-grad" onclick="loadProduct(this)">Ver Detalles...</button>
+            </div>
+          </div>
+          <div class="catalog-card product health">
+            <div class="card-img">
+              <img src="../img/health4.png" alt="health4" class="image">
+            </div>
+            <div class="card-info">
+              <h2 class="subtitle product-name info-cat">Insecticida Fulminate</h2>
               <p class="price">15$</p>
             </div>
             <div class="show">
