correcion del responsive

--- a/src/html/catalog.html
+++ b/src/html/catalog.html
@@ -56,7 +56,7 @@
     <div class="catalogue">
       <div class="catalog-row">
         <div class="catalog-category">
-          <h1 class="title title-dog">Perros</h1>
+          <h1 class="title title-dog" id="category1">Perros</h1>
         </div>
         <div class="catalog-cont">
           <div class="catalog-card product dog">
@@ -113,7 +113,7 @@
       </div>
       <div class="catalog-row">
         <div class="catalog-category">
-          <h1 class="title title-cat">Gatos</h1>
+          <h1 class="title title-cat" id="category2">Gatos</h1>
         </div>
         <div class="catalog-cont">
           <div class="catalog-card product cat">
@@ -170,7 +170,7 @@
       </div>
       <div class="catalog-row">
         <div class="catalog-category">
-          <h1 class="title title-accessories">Accesorios</h1>
+          <h1 class="title title-accessories" id="category3">Accesorios</h1>
         </div>
         <div class="catalog-cont">
           <div class="catalog-card product accessories">
@@ -230,7 +230,7 @@
       </div>
       <div class="catalog-row">
         <div class="catalog-category">
-          <h1 class="title title-shower">Higiene</h1>
+          <h1 class="title title-shower" id="category4">Higiene</h1>
         </div>
         <div class="catalog-cont">
           <div class="catalog-card product shower">
@@ -288,7 +288,7 @@
       </div>
       <div class="catalog-row">
         <div class="catalog-category">
-          <h1 class="title title-health">Salud</h1>
+          <h1 class="title title-health" id="category5">Salud</h1>
         </div>
         <div class="catalog-cont">
           <div class="catalog-card product health">
