--- a/index.html
+++ b/index.html
@@ -77,7 +77,7 @@
       <div class="categories">
         <div class="categories-row">
           <div class="category" id="dog">
-            <a href="#">
+            <a href="src/html/catalog.html">
               <div class="category-img">
                 <img src="src/img/dog.png" alt="dog">
               </div>
@@ -147,8 +147,8 @@
                 </span>
               </div>
               <div class="button">
-                <a href="#">
-                  <button class="btn-grad">Ver Detalles...</button>
+                <a href="src/html/catalog.html">
+                  <button class="btn-grad">Ver Catálogo...</button>
                 </a>
               </div>
             </div>
@@ -175,8 +175,8 @@
                 </span>
               </div>
               <div class="button">
-                <a href="#">
-                  <button class="btn-grad">Ver Detalles...</button>
+                <a href="src/html/catalog.html">
+                  <button class="btn-grad">Ver Catálogo...</button>
                 </a>
               </div>
             </div>
@@ -205,8 +205,8 @@
                 </span>
               </div>
               <div class="button">
-                <a href="#">
-                  <button class="btn-grad">Ver Detalles...</button>
+                <a href="src/html/catalog.html">
+                  <button class="btn-grad">Ver Catálogo...</button>
                 </a>
               </div>
             </div>
@@ -233,8 +233,8 @@
                 </span>
               </div>
               <div class="button">
-                <a href="#">
-                  <button class="btn-grad">Ver Detalles...</button>
+                <a href="src/html/catalog.html">
+                  <button class="btn-grad">Ver Catálogo...</button>
                 </a>
               </div>
             </div>
